build: Updating npm dependencies
* stylelint-config-wikimedia: 0.13.0 → 0.14.0

Run stylelint fix to fix the new stylelint rule

Change-Id: Ic217a17f29dee049a39dc5c023cbc3f59b9d2f62

--- a/modules/ext.growthExperiments.Account.styles/WelcomeSurvey.less
+++ b/modules/ext.growthExperiments.Account.styles/WelcomeSurvey.less
@@ -117,8 +117,8 @@
 			box-sizing: border-box;
 
 			// Put three animated dots in the placeholder box
-			&:before,
-			&:after,
+			&::before,
+			&::after,
 			.oo-ui-checkboxMultiselectInputWidget {
 				content: '';
 				display: inline-block;
@@ -130,12 +130,12 @@
 				animation-delay: -160ms;
 			}
 
-			&:before {
+			&::before {
 				margin-right: 0.25em;
 				animation-delay: 0ms;
 			}
 
-			&:after {
+			&::after {
 				margin-left: 0.25em;
 				animation-delay: -330ms;
 			}
@@ -160,8 +160,8 @@
 				border: 0;
 				background-color: transparent;
 
-				&:before,
-				&:after,
+				&::before,
+				&::after,
 				.oo-ui-checkboxMultiselectInputWidget {
 					display: none;
 				}
