--- a/modules/ext.growthExperiments.Homepage.NewImpact/styles/NewImpact.less
+++ b/modules/ext.growthExperiments.Homepage.NewImpact/styles/NewImpact.less
@@ -37,7 +37,7 @@
 			// Overwrite homepage module default padding
 			padding: 0;
 
-			&:before {
+			&::before {
 				content: '';
 				position: absolute;
 				top: 0;
