--- a/modules/ext.growthExperiments.Homepage.styles/ImpactModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/ImpactModule.less
@@ -201,7 +201,7 @@
 
 	&-unactivated-mobile-overlay {
 		// overriding default white background for overlays
-		&:before {
+		&::before {
 			content: '';
 			position: absolute;
 			top: 0;
