--- a/modules/ext.growthExperiments.Homepage.styles/SmallTaskCard.less
+++ b/modules/ext.growthExperiments.Homepage.styles/SmallTaskCard.less
@@ -46,7 +46,7 @@
 		&-skeleton {
 			.loading-animation (400ms);
 
-			&:before {
+			&::before {
 				border-radius: 2px 2px 0 0;
 			}
 		}
@@ -79,7 +79,7 @@
 		&.skeleton {
 			.loading-animation (600ms);
 
-			&:before {
+			&::before {
 				content: '\00a0';
 			}
 		}
@@ -93,7 +93,7 @@
 		&.skeleton {
 			.loading-animation (800ms);
 
-			&:before {
+			&::before {
 				content: '\00a0';
 			}
 		}
@@ -126,7 +126,7 @@
 		&.skeleton {
 			.loading-animation (1200ms);
 
-			&:before {
+			&::before {
 				content: '\00a0';
 			}
 		}
