--- a/modules/ext.growthExperiments.Homepage.SuggestedEdits/StartEditingDialog.less
+++ b/modules/ext.growthExperiments.Homepage.SuggestedEdits/StartEditingDialog.less
@@ -58,7 +58,7 @@
 			background-color: @colorGray15;
 			padding: 1.5em @startEditingDialogSidePadding;
 
-			&:after {
+			&::after {
 				content: '';
 				display: block;
 				clear: both;
@@ -158,7 +158,7 @@
 					font-weight: normal;
 				}
 
-				&:after {
+				&::after {
 					content: '';
 					display: block;
 					clear: both;
@@ -243,7 +243,7 @@
 					display: block;
 					padding-bottom: 1em;
 
-					&:after {
+					&::after {
 						content: '';
 						display: block;
 						clear: both;
