--- a/modules/ext.growthExperiments.Homepage.styles/Homepage.less
+++ b/modules/ext.growthExperiments.Homepage.styles/Homepage.less
@@ -26,7 +26,7 @@
 			list-style: none;
 			margin: 0.3em 0 0 1em;
 
-			li:before {
+			li::before {
 				content: '\2022';
 				color: #0645ad;
 				margin-right: 0.3em;
