--- a/modules/ext.growthExperiments.Homepage.styles/TaskExplanationWidget.less
+++ b/modules/ext.growthExperiments.Homepage.styles/TaskExplanationWidget.less
@@ -61,15 +61,15 @@
 		line-height: 12px;
 		border-radius: 2px 0 0 2px;
 
-		&:before,
-		&:after {
+		&::before,
+		&::after {
 			content: '';
 			position: absolute;
 			width: 0;
 			height: 0;
 		}
 
-		&:before {
+		&::before {
 			right: -5px;
 			bottom: -1px;
 			border-right: 4px solid transparent;
@@ -77,7 +77,7 @@
 			border-bottom: 9px solid @darkenColor;
 		}
 
-		&:after {
+		&::after {
 			right: -4px;
 			bottom: 0;
 			border-right: 4px solid transparent;
