--- a/modules/ext.growthExperiments.StructuredTask/addimage/ceRecommendedImageNode.less
+++ b/modules/ext.growthExperiments.StructuredTask/addimage/ceRecommendedImageNode.less
@@ -75,7 +75,7 @@
 		border: 1px solid @wmui-color-base70;
 		background: @wmui-color-base100;
 
-		&:not( [ typeof~='mw:Error' ] ) > a:after {
+		&:not( [ typeof~='mw:Error' ] ) > a::after {
 			content: unset;
 		}
 
@@ -108,7 +108,7 @@
 	}
 
 	.mw-ge-recommendedImageCaption {
-		:before {
+		::before {
 			content: unset;
 		}
 		border: 2px solid @wmui-color-base70;
