--- a/modules/utils/mixins.less
+++ b/modules/utils/mixins.less
@@ -5,7 +5,7 @@
 	animation: loading 2s ease infinite;
 	animation-delay: @delay;
 
-	&:before {
+	&::before {
 		content: '';
 		width: 100%;
 		height: 100%;
