Frontend documentation: refactor OnboardingStep to named slots
Passing content for each step inside a named slot instead of using OnboardingStep.vue

Follow-up: I57dc528edc648cd7fc726ac22e53f3adcfb3d7fa
Bug: T334471
Change-Id: Id39873b780fe9e24c9ca19972ab2cee6a39ef005

--- a/documentation/frontend/components/variables.less
+++ b/documentation/frontend/components/variables.less
@@ -3,3 +3,6 @@
 @onboardingExampleBorderColor: #eaecf0;
 
 @onboardingImageBorderColor: #eaecf0;
+
+@onboardingDialogHeight: 520px;
+@onboardingDialogWidth: 500px;
