--- a/documentation/frontend/components/variables.less
+++ b/documentation/frontend/components/variables.less
@@ -13,3 +13,4 @@
 @onboardingDialogMinWidth: 320px;
 @onboardingImageHeight: 216px;
 @onboardingCloseButtonMinWidht: 90px;
+@filterLoadingColor: @background-color-interactive;
