Section images: create task type
* Create a new task type SectionImageRecommendationTaskType,
register a handler and create a placeholder recommendation
provider and submission handler
* Add section-level-image CSS classes to display the new
task type on the selection dialog

Bug: T329275
Change-Id: Ib1f570d516ff11c6e6a7547534572c7f5ba9b316

--- a/modules/ext.growthExperiments.Homepage.SuggestedEdits/TaskTypeSelectionWidget.less
+++ b/modules/ext.growthExperiments.Homepage.SuggestedEdits/TaskTypeSelectionWidget.less
@@ -69,6 +69,7 @@
 
 	.oo-ui-widget&-checkbox-create,
 	.oo-ui-widget&-checkbox-image-recommendation,
+	.oo-ui-widget&-checkbox-section-image-recommendation,
 	.oo-ui-widget&-checkbox-link-recommendation {
 		.oo-ui-labelElement-label {
 			display: block;
@@ -93,7 +94,8 @@
 			}
 
 			&-link-recommendation,
-			&-image-recommendation {
+			&-image-recommendation,
+			&-section-image-recommendation {
 				padding-left: unset;
 
 				span {
