--- a/documentation/frontend/components/variables.less
+++ b/documentation/frontend/components/variables.less
@@ -7,6 +7,9 @@
 @onboardingDialogHeight: 520px;
 @onboardingDialogWidth: 500px;
 
+@onboardingImageHeight: 216px;
+@onboardingImageWidth: 360px;
+
 .ext-growthExperiments-onboarding-dialog-size() {
 	width: @onboardingDialogWidth;
 	height: @onboardingDialogHeight;
@@ -20,12 +23,13 @@
 	// This border color is not a DS border-color yet and may be changed
 	// See https://phabricator.wikimedia.org/T332567
 	border-bottom: @border-width-base @border-style-base @onboardingImageBorderColor;
-	display: flex;
-	justify-content: center;
 	// HACK The negative margin values are needed to overwrite
 	// CdxDialog body left and right gutter and display the full bleed image
 	margin-left: @spacing-150 * -1em;
 	margin-right: @spacing-150 * -1em;
+	height: @onboardingImageHeight;
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 .ext-growthExperiments-onboarding-dialog-title() {
