--- a/documentation/frontend/components/variables.less
+++ b/documentation/frontend/components/variables.less
@@ -23,13 +23,14 @@
 	// This border color is not a DS border-color yet and may be changed
 	// See https://phabricator.wikimedia.org/T332567
 	border-bottom: @border-width-base @border-style-base @onboardingImageBorderColor;
-	// HACK The negative margin values are needed to overwrite
-	// CdxDialog body left and right gutter and display the full bleed image
-	margin-left: @spacing-150 * -1em;
-	margin-right: @spacing-150 * -1em;
 	height: @onboardingImageHeight;
 	background-position: center;
 	background-repeat: no-repeat;
+}
+
+.ext-growthExperiments-onboarding-dialog-textcontent() {
+	padding-left: @spacing-150;
+	padding-right: @spacing-150;
 }
 
 .ext-growthExperiments-onboarding-dialog-title() {
