Frontend documentation: Update less variables and OnboardingDialog styles
- Remove unnecessary styles and less variables
- Adapt Dialog height and width variables to adopt new onboarding design specs
- Remove dialog fixed height from OnboardingDialog so it can be adapted to different dialog content lenght
- Move less mixins to mixins.less
- Set a min-widht to dialog header button to reserve space for the button when dialog title is long

Bug: T336270
Change-Id: I3ceb47f55abe8d44d60c1dfcedceb503053a7f03

--- a/documentation/frontend/components/variables.less
+++ b/documentation/frontend/components/variables.less
@@ -3,87 +3,8 @@
 
 @onboardingBackgroundColor:  #f4f9ff;
 @onboardingExampleBorderColor: #eaecf0;
-@onboardingImageBorderColor: #eaecf0;
-@onboardingDialogHeight: 520px;
-@onboardingDialogWidth: 500px;
-
-@onboardingImageHeight: 216px;
-@onboardingImageWidth: 360px;
-
-.ext-growthExperiments-onboarding-dialog-size() {
-	width: @onboardingDialogWidth;
-	height: @onboardingDialogHeight;
-}
-.ext-growthExperiments-onboarding-dialog-color() {
-	color: @color-base;
-}
-
-.ext-growthExperiments-onboarding-dialog-image() {
-	background-color: @onboardingBackgroundColor;
-	// This border color is not a DS border-color yet and may be changed
-	// See https://phabricator.wikimedia.org/T332567
-	border-bottom: @border-width-base @border-style-base @onboardingImageBorderColor;
-	height: @onboardingImageHeight;
-	background-position: center;
-	background-repeat: no-repeat;
-}
-
-.ext-growthExperiments-onboarding-dialog-textcontent() {
-	padding-left: @spacing-150;
-	padding-right: @spacing-150;
-}
-
-.ext-growthExperiments-onboarding-dialog-title() {
-	padding-top: @spacing-50;
-	font-size: @font-size-medium;
-	font-weight: @font-weight-bold;
-}
-
-.ext-growthExperiments-onboarding-dialog-text() {
-	padding-top: @spacing-50;
-	font-size: @font-size-small;
-	line-height: @line-height-xx-small;
-}
-
-.ext-growthExperiments-mixin__slide-transition-toRight() {
-	position: relative;
-	// stylelint-disable selector-class-pattern
-	.toRight-enter-active,
-	.toRight-leave-active {
-		transition: all 500ms @animation-timing-function-base;
-	}
-
-	.toRight-leave-to {
-		transform: translateX( @size-full );
-	}
-
-	.toRight-enter-from {
-		transform: translateX( -@size-full );
-	}
-
-	.toRight-leave-active {
-		position: absolute;
-	}
-	// stylelint-enable selector-class-pattern
-}
-.ext-growthExperiments-mixin__slide-transition-toLeft() {
-	position: relative;
-	// stylelint-disable selector-class-pattern
-	.toLeft-enter-active,
-	.toLeft-leave-active {
-		transition: all 500ms @animation-timing-function-base;
-	}
-
-	.toLeft-enter-from {
-		transform: translateX( @size-full );
-	}
-
-	.toLeft-leave-to {
-		transform: translateX( -@size-full );
-	}
-
-	.toLeft-leave-active {
-		position: absolute;
-	}
-	// stylelint-enable selector-class-pattern
-}
+@onboardingDialogHeight: 581px;
+@onboardingDialogMaxWidth: 512px;
+@onboardingDialogMinWidth: 320px;
+@onboardingImageHeight: 256px;
+@onboardingCloseButtonMinWidht: 90px;
