Frontend documentation: Add a MultiPane component with transition and swipe logic
- Split transitions between steps and touch gesture support logic for
OnboardingDialog in a new low-level reusable component.
- Remove unused showPaginator prop from OnboardingDialog
- Add MultiPaneDemo to docs site
TODO:
- Use transition mixins in MultiPane transitions

Bug: T336750
Change-Id: I5e4a82099c6656faaf5ca45739c0433ae4e4555c

--- a/documentation/frontend/components/variables.less
+++ b/documentation/frontend/components/variables.less
@@ -43,3 +43,46 @@
 	font-size: @font-size-small;
 	line-height: @line-height-xx-small;
 }
+
+.ext-growthExperiments-mixin__slide-transition-toRight() {
+	position: relative;
+	// stylelint-disable selector-class-pattern
+	.toRight-enter-active,
+	.toRight-leave-active {
+		transition: all 500ms @animation-timing-function-base;
+	}
+
+	.toRight-leave-to {
+		transform: translateX( @size-full );
+	}
+
+	.toRight-enter-from {
+		transform: translateX( -@size-full );
+	}
+
+	.toRight-leave-active {
+		position: absolute;
+	}
+	// stylelint-enable selector-class-pattern
+}
+.ext-growthExperiments-mixin__slide-transition-toLeft() {
+	position: relative;
+	// stylelint-disable selector-class-pattern
+	.toLeft-enter-active,
+	.toLeft-leave-active {
+		transition: all 500ms @animation-timing-function-base;
+	}
+
+	.toLeft-enter-from {
+		transform: translateX( @size-full );
+	}
+
+	.toLeft-leave-to {
+		transform: translateX( -@size-full );
+	}
+
+	.toLeft-leave-active {
+		position: absolute;
+	}
+	// stylelint-enable selector-class-pattern
+}
