Section images: Use image recommendation thumbnail icon
Show the image recommendation icon in the task pager instead of
showing the article's page image.

This does not quite match the design in T335924 yet, it's mostly
just to make it easier to keep track of which parts of the code
have been duplicated for section images.

Bug: T335924
Change-Id: I7e9e96685c523ab6a404eea17c49dbbfc40a6ae4

--- a/modules/ext.growthExperiments.Homepage.styles/SuggestedEditsModule.less
+++ b/modules/ext.growthExperiments.Homepage.styles/SuggestedEditsModule.less
@@ -554,7 +554,8 @@ body.mw-special-Homepage {
 							background-size: 60px;
 						}
 
-						&.mw-ge-tasktype-image-recommendation {
+						&.mw-ge-tasktype-image-recommendation,
+						&.mw-ge-tasktype-section-image-recommendation {
 							background-color: #72777d;
 							background-image: url( ../../images/addimage/placeholder-with-question-mark-ltr.svg ), url( ../../images/addimage/commons.svg );
 							background-repeat: no-repeat;
@@ -674,7 +675,8 @@ body.mw-special-Homepage {
 					border-top-right-radius: @border-radius-base;
 
 					// Needs some extra specificity.
-					&.mw-ge-tasktype-image-recommendation.se-card-image.se-card-image {
+					&.mw-ge-tasktype-image-recommendation.se-card-image.se-card-image,
+					&.mw-ge-tasktype-section-image-recommendation.se-card-image.se-card-image {
 						background-position: center center, right 8px bottom 8px;
 						background-size: 54px, 75px;
 					}
