--- a/modules/ext.growthExperiments.Homepage.styles/SmallTaskCard.less
+++ b/modules/ext.growthExperiments.Homepage.styles/SmallTaskCard.less
@@ -31,7 +31,8 @@
 			/* @embed */
 			background: url( ../../images/suggestededits/placeholder-image.svg ) no-repeat center/40px, @background-color-growth-apparent;
 
-			.mw-ge-tasktype-image-recommendation & {
+			.mw-ge-tasktype-image-recommendation &,
+			.mw-ge-tasktype-section-image-recommendation & {
 				/* @embed */
 				background: url( ../../images/addimage/placeholder-with-question-mark-ltr.svg ) no-repeat center/40px, @color-subtle;
 
