--- a/documentation/frontend/components/variables.less
+++ b/documentation/frontend/components/variables.less
@@ -3,8 +3,13 @@
 
 @onboardingBackgroundColor:  #f4f9ff;
 @onboardingExampleBorderColor: #eaecf0;
-@onboardingDialogHeight: 581px;
+/**
+ * Dialog height is calculated to fit the step with the maximum content in desktop
+ * 370px = 85px header + 216px image + 201px text content + 66px footer + 2px borders
+ * Design spec: https://www.figma.com/file/NdhQGVzaNAEJiFwj84PYiC/Onboarding-Dialog---T332767?type=design&node-id=2578-213713&t=NSXHt78NummEzLWu-4
+ */
+@onboardingDialogHeight: 570px;
 @onboardingDialogMaxWidth: 512px;
 @onboardingDialogMinWidth: 320px;
-@onboardingImageHeight: 256px;
+@onboardingImageHeight: 216px;
 @onboardingCloseButtonMinWidht: 90px;
