Section images: use dedicated illustration thumbnails
- Change the icon color and placeholder background color
for both article-level and section-level tasks

Bug: T335924
Change-Id: I07ada72a6cab4317ab932b58f5fd0c22b6d3fea2

--- a/modules/ext.growthExperiments.Homepage.styles/SmallTaskCard.less
+++ b/modules/ext.growthExperiments.Homepage.styles/SmallTaskCard.less
@@ -29,17 +29,27 @@
 
 		&-placeholder {
 			/* @embed */
-			background: url( ../../images/suggestededits/placeholder-image.svg ) no-repeat center/40px, @background-color-growth-apparent;
+			background: url( ../../images/suggestededits/placeholder-image.svg ) no-repeat center/40px, @mediumBackgroundColor;
 
-			.mw-ge-tasktype-image-recommendation &,
-			.mw-ge-tasktype-section-image-recommendation & {
+			.mw-ge-tasktype-image-recommendation & {
 				/* @embed */
-				background: url( ../../images/addimage/placeholder-with-question-mark-ltr.svg ) no-repeat center/40px, @color-subtle;
+				background: url( ../../images/addimage/placeholder-with-question-mark-ltr.svg ) no-repeat center/40px, @mediumBackgroundColor;
 
 				html:lang( he ) & {
 					// Use LTR asset for Hebrew since it contains a question mark
 					/* @noflip */
-					background: url( ../../images/addimage/placeholder-with-question-mark-ltr.svg ) no-repeat center/40px, @color-subtle;
+					background: url( ../../images/addimage/placeholder-with-question-mark-ltr.svg ) no-repeat center/40px, @mediumBackgroundColor;
+				}
+			}
+
+			.mw-ge-tasktype-section-image-recommendation & {
+				/* @embed */
+				background: url( ../../images/addsectionimage/placeholder-with-question-mark-ltr.svg ) no-repeat center/40px @mediumBackgroundColor;
+
+				html:lang( he ) & {
+					// Use LTR asset for Hebrew since it contains a question mark
+					/* @noflip */
+					background: url( ../../images/addsectionimage/placeholder-with-question-mark-ltr.svg ) no-repeat center/40px @mediumBackgroundColor;
 				}
 			}
 		}
