Section images: add missing rtl images
- Reposition image so it does not overlap with
the pager label

Bug: T332925
Change-Id: I5a0b6bd1087ac2c25c4f914e90e7b91bc88abae1

--- a/modules/ext.growthExperiments.StructuredTask.PreEdit/addsectionimage/AddSectionImageOnboardingContent.less
+++ b/modules/ext.growthExperiments.StructuredTask.PreEdit/addsectionimage/AddSectionImageOnboardingContent.less
@@ -1,12 +1,16 @@
 @import 'mediawiki.skin.variables.less';
 
 .onboarding-image( @index ) {
-	// FIXME add mobile assets when they are ready (T332925)
-	// &-image@{index} {
-	// 	background-image: url( '../../../images/addsectionimage/onboarding-image@{index}-ltr.svg' );
-	// }
+	&-image@{index} {
+		// FIXME add mobile assets when they are ready (T332925)
+		background-image: url( '../../../images/addsectionimage/desktop-onboarding-image@{index}-ltr.svg' );
+		// Reposition image so it does not overlap with the pager
+		background-position: 120px;
+	}
 	&-image@{index}--desktop {
 		background-image: url( '../../../images/addsectionimage/desktop-onboarding-image@{index}-ltr.svg' );
+		// Reposition image so it does not overlap with the pager
+		background-position: 120px;
 	}
 }
 
