Section images: update rtl asset with flipped question mark
Why:
 - So RTL languages see a flipped question mark in the
onboarding illustration

What:
 - Update the asset
 - Use .background-image-noflip mixin to prevent flipping
on languages already reported this as incorrect, eg: T327619,
T260283.
 - Use .background-position-ltr-rtl to reposition the image
and avoid most of the overlaps between the image and the pager.

Bug: T335207
Change-Id: I17b2f4187c990c92d6c0718bcda8b26c84124428

--- a/modules/utils/mixins.less
+++ b/modules/utils/mixins.less
@@ -127,6 +127,33 @@
 	padding: 0;
 }
 
+/*
+* Mixin to avoid flipping images that contain problematic characters
+* like a question mark "?" in Hewbrew and Yiddish wikis.
+*/
+.background-image-noflip( @imageSrc ) {
+	html:lang( he ) &,
+	html:lang( yi ) & {
+		/* @noflip */
+		background-image: @imageSrc;
+	}
+}
+
+/*
+* Mixin to set a different background position based on the html document
+* direction. This is useful to position images that have a different
+* asset for LTR / RTL.
+*/
+.background-position-ltr-rtl( @bgPositionLTR, @bgPositionRTL ) {
+	html[ dir='ltr' ] & {
+		background-position: @bgPositionLTR;
+	}
+
+	html[ dir='rtl' ] & {
+		background-position: @bgPositionRTL;
+	}
+}
+
 // Helpers
 .ext-growthExperiments-utils__pull-right {
 	float: right;
