--- a/modules/ext.growthExperiments.StructuredTask.PreEdit/addsectionimage/AddSectionImageOnboardingContent.less
+++ b/modules/ext.growthExperiments.StructuredTask.PreEdit/addsectionimage/AddSectionImageOnboardingContent.less
@@ -1,16 +1,27 @@
 @import 'mediawiki.skin.variables.less';
+@import '../../utils/mixins.less';
 
 .onboarding-image( @index ) {
 	&-image@{index} {
 		// FIXME add mobile assets when they are ready (T332925)
 		background-image: url( '../../../images/addsectionimage/desktop-onboarding-image@{index}-ltr.svg' );
 		// Reposition image so it does not overlap with the pager
-		background-position: 120px;
+		.background-position-ltr-rtl( 100px, 30px );
+		// Prevent flipping asset in Hewbrew and Yiddish
+		.background-image-noflip(
+			// FIXME add mobile assets when they are ready (T332925)
+			url( '../../../images/addsectionimage/desktop-onboarding-image@{index}-ltr.svg' )
+		);
 	}
+
 	&-image@{index}--desktop {
 		background-image: url( '../../../images/addsectionimage/desktop-onboarding-image@{index}-ltr.svg' );
 		// Reposition image so it does not overlap with the pager
-		background-position: 120px;
+		.background-position-ltr-rtl( 100px, 30px );
+		// Prevent flipping asset in Hewbrew and Yiddish
+		.background-image-noflip(
+			url( '../../../images/addsectionimage/desktop-onboarding-image@{index}-ltr.svg' )
+		);
 	}
 }
 
