Section images: Handle text overflow in the review dialog CTA text
Bug: T339371
Change-Id: I3891991bcb3ddc5cdb17f9bb6080e185eb9ce6e3

--- a/modules/ext.growthExperiments.StructuredTask/addimage/RecommendedImageToolbarDialog.less
+++ b/modules/ext.growthExperiments.StructuredTask/addimage/RecommendedImageToolbarDialog.less
@@ -31,6 +31,8 @@
 		color: @color-subtle;
 		font-weight: bold;
 		margin: 16px 0 0;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
 
 	.mw-ge-recommendedImageToolbarDialog-reason {
