Fix font size and visual display for Structured task save dialog
Bug: T332827
Change-Id: I5a32e730a6cd57b163bc29d8c79d10d6fd9a8e36

--- a/modules/ext.growthExperiments.StructuredTask.desktop/MinimizedToolbarDialogButton.less
+++ b/modules/ext.growthExperiments.StructuredTask.desktop/MinimizedToolbarDialogButton.less
@@ -8,10 +8,8 @@
 	z-index: 2;
 	opacity: @opacity-base;
 	transition: all 200ms;
-
-	&-container {
-		font-size: 1em;
-	}
+	/* stylelint-disable-next-line unit-disallowed-list */
+	font-size: 1rem;
 
 	&--hidden {
 		opacity: 0;
