MentorTools: Remove a redundant label
Bug: T322884
Change-Id: I4168d4a0730a999f590dfa0eca4fc0bff5b28415

--- a/modules/ext.growthExperiments.MentorDashboard/MentorTools/MentorTools.less
+++ b/modules/ext.growthExperiments.MentorDashboard/MentorTools/MentorTools.less
@@ -65,7 +65,7 @@
 	.growthexperiments-mentor-dashboard-module-mentor-tools-other-actions {
 		// to get out of padding set to the module's container div and be able to apply background-color edge-to-edge
 		margin: 0 @mentorDashboardModulePadding * -1 @mentorDashboardModulePadding * -1;
-		padding: 0 @mentorDashboardModulePadding @mentorDashboardModulePadding;
+		padding: @mentorDashboardModulePadding;
 		background-color: @background-color-growth-subtle;
 		/* stylelint-disable-next-line no-descending-specificity */
 		h4 {
