GrowthExperiments help icon shouldn't remove limited width toggle on Vector
We'd like to remove the skinStyle in Vector 2022 that hides the limited
width toggle. Please see I3b8881ad37fa0fb06b60e50f2a7608f7d7b3e0ab
which should be merged at the same time as this patch.

Bug: T341740
Change-Id: Ia4495f75b51626ab6dd2805574dfdc6199535015

--- a/modules/ext.growthExperiments.HelpPanel/HelpPanelCta.less
+++ b/modules/ext.growthExperiments.HelpPanel/HelpPanelCta.less
@@ -3,9 +3,6 @@
 	@media print {
 		display: none;
 	}
-	position: fixed;
-	bottom: 2em;
-	right: 1em;
 	animation: help-panel-slidein 800ms;
 
 	&.animate-out {
@@ -17,6 +14,12 @@
 	.client-js &:not( .mw-ge-help-panel-ready ) {
 		display: none;
 	}
+}
+
+.mw-ge-help-panel-widget-overlay .mw-ge-help-panel-cta {
+	position: fixed;
+	bottom: 2em;
+	right: 1em;
 }
 
 @keyframes help-panel-slidein {
