help: Fix navigation in the help panel
Bug: T342927
Change-Id: Ie2d2e8cd284d5657f3f993c580d3d4fea907226f

--- a/modules/ext.growthExperiments.Help/HelpPanelProcessDialog.less
+++ b/modules/ext.growthExperiments.Help/HelpPanelProcessDialog.less
@@ -234,6 +234,11 @@
 		flex-direction: column;
 		height: 100%;
 
+		// display:flex would override hidden="hidden"
+		&[ hidden ] {
+			display: none;
+		}
+
 		&-switch-editor-panel {
 			background-color: @background-color-growth-subtle;
 			border: @border-subtle;
