--- a/modules/ext.growthExperiments.StructuredTask/addsectionimage/ceRecommendedImagePlaceholderNode.less
+++ b/modules/ext.growthExperiments.StructuredTask/addsectionimage/ceRecommendedImagePlaceholderNode.less
@@ -46,7 +46,7 @@
 	}
 }
 
-@media screen and ( min-width: @width-breakpoint-tablet ) {
+@media screen and ( min-width: @min-width-breakpoint-tablet ) {
 	.mw-ge-structuredTaskMobileArticleTarget {
 		// figure[typeof~='mw:File/Thumb'].mw-halign-right/left from
 		// MinervaNeue:resources/skins.minerva.base.styles/content/tablet/common.less
