Section images: avoid onboarding images exceed viewport on mobile
The horizontal shift of the background position to avoid the image
overlap with the pager is problematic as it exceeds viewport in
narrow screens. Push the image down instead and horizontally
centered.

Bug: T349024
Change-Id: I50d5b1ab2bf320c56c580d64917cd2f5a7075ef6

--- a/modules/ext.growthExperiments.StructuredTask.PreEdit/addsectionimage/AddSectionImageOnboardingContent.less
+++ b/modules/ext.growthExperiments.StructuredTask.PreEdit/addsectionimage/AddSectionImageOnboardingContent.less
@@ -1,12 +1,15 @@
 @import 'mediawiki.skin.variables.less';
 @import '../../utils/mixins.less';
 
+@imageBgPostionY: 24px;
+
 .onboarding-image( @index ) {
 	&-image@{index} {
 		// FIXME add mobile assets when they are ready (T332925)
 		background-image: url( '../../../images/addsectionimage/desktop-onboarding-image@{index}-ltr.svg' );
-		// Reposition image so it does not overlap with the pager
-		.background-position-ltr-rtl( 100px, 30px );
+		// Reposition image so it does not overlap with the pager. Horizontal
+		// shifts make the image exceed the viewport, see T349024#9320264.
+		background-position: center @imageBgPostionY;
 	}
 
 	&-image@{index}--desktop {
@@ -17,6 +20,10 @@
 }
 
 .addsectionimage-onboarding-content {
+	& .structuredtask-onboarding-content-image {
+		height: 216px + @imageBgPostionY;
+	}
+
 	&--color-subtle {
 		font-style: italic;
 		color: @color-subtle;
