Fix exit button and address deprecation warnings
The mw.mobileFrontend library is being deprecated and we are
dropping support for mediawiki.ui in favor of Codex based libraries.

This change limits the reliance on upstream MobileFrontend library
to only stable APIs and should help avoid T344481 on the long run.

Bug: T348807
Bug: T352582
Change-Id: I2781375fae8db58c329cf8537c1bbb2c611ef16c

--- a/modules/ext.growthExperiments.HelpPanel/HelpPanelCta.less
+++ b/modules/ext.growthExperiments.HelpPanel/HelpPanelCta.less
@@ -1,3 +1,5 @@
+@import 'mediawiki.skin.variables.less';
+
 .mw-ge-help-panel-cta {
 	// Don't show the help panel in printable versions of a page.
 	@media print {
@@ -20,6 +22,12 @@
 	position: fixed;
 	bottom: 2em;
 	right: 1em;
+}
+
+.suggested-edits-mobile-peek-footer {
+	a {
+		.cdx-mixin-link-underlined();
+	}
 }
 
 @keyframes help-panel-slidein {
