Section images: adjust placeholder width in narrow screens
- Substract horizontal margins added in mobile
- Use border-box to avoid border overflow content area

Bug: T352208
Change-Id: I718ae30bab5d185cbdab2182e2a184ceb0b7b495

--- a/modules/ext.growthExperiments.StructuredTask/addsectionimage/ceRecommendedImagePlaceholderNode.less
+++ b/modules/ext.growthExperiments.StructuredTask/addsectionimage/ceRecommendedImagePlaceholderNode.less
@@ -8,6 +8,7 @@
 	background-position: center;
 	background-size: 32px;
 	border: 2px dashed @border-color-progressive;
+	box-sizing: border-box;
 	// follow ceRecommendedImageNode.less
 	max-width: 500px;
 }
